:sparkles: test QueryDSL product Repository