@@ -1,10 +1,12 @@
 package io.ssafy.mallook.domain.product.dao;
 
+import com.querydsl.jpa.impl.JPAQueryFactory;
 import config.QueryDSLTestConfig;
 import io.ssafy.mallook.domain.product.dto.response.ProductListDto;
 import io.ssafy.mallook.domain.product.entity.MainCategory;
 import io.ssafy.mallook.domain.product.entity.Product;
 import io.ssafy.mallook.domain.product.entity.SubCategory;
+import io.ssafy.mallook.global.config.QueryDSLConfig;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import org.junit.jupiter.api.BeforeEach;
@@ -12,6 +14,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -20,16 +23,21 @@ import org.springframework.data.domain.Pageable;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @DataJpaTest
-@Import(QueryDSLTestConfig.class)
+@Import(QueryDSLConfig.class)
+@ComponentScan(basePackages = "io.ssafy.mallook.domain.product.dao")
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 class ProductCustomRepositoryTest {
 
-    @PersistenceContext
+    @Autowired
     private EntityManager entityManager;
+
+    @Autowired
+    private JPAQueryFactory queryFactory;
 
     @Autowired
     private ProductCustomRepository productCustomRepository;
@@ -39,9 +47,9 @@ class ProductCustomRepositoryTest {
 
     private List<Product> mockProducts = new ArrayList<>();
 
-
     @BeforeEach
     void init() {
+        queryFactory = new JPAQueryFactory(entityManager);
         Product product = Product
                 .builder()
                 .name("테스트 바지")
@@ -54,7 +62,6 @@ class ProductCustomRepositoryTest {
         entityManager.clear();
     }
 
-
     @Test
     void findAllProduct() {
         Pageable pageable = PageRequest.of(0, 2);
@@ -65,8 +72,8 @@ class ProductCustomRepositoryTest {
 
         List<ProductListDto> expectedList = mockProducts.stream()
                 .map(ProductListDto::toDto)
-                .toList();
-        Page<ProductListDto> expectedPage = new PageImpl<>(expectedList);
+                .collect(Collectors.toList());
+        Page<ProductListDto> expectedPage = new PageImpl<>(expectedList, pageable, expectedList.size());
 
         assertEquals(expectedPage, result);
     }
